--- a/style.css
+++ b/style.css
@@ -1,34 +1,84 @@
+html {
+  height: 100%;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+
+.body-home {
+  background-image: url("images/background-01-port.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.body-meals {
+  background-image: url("images/background-02-port.png");
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/*============= HEADER ===============*/
+.header {
+background-color: #2196f3;
+  width: 100%;
+  height: 50px;
+  top: 0;
+
+  position: fixed;
+  overflow: hidden;
   text-align: center;
 }
-
-header {
-  background: #ff6347;
-  color: white;
-  padding: 20px;
+.header i {
+  float: left;
+  padding: 17px 0px 0px 17px;
+  color: #ffffff;
+}
+.header img {
+  width: 150px;
+  padding-top: 14px;
+  padding-right: 25px;
 }
 
-.logo {
-  max-width: 100px;
+/*============= HOME PAGE ===============*/
+
+#home-logo-img{
+  width: 50px;
+  display: block;
+  margin: auto;
+  padding: 25px 10px 10px 10px;
+}
+#home-logo-text{
+  width: auto;
+  display: block;
+  margin: auto;
+  padding: 25px;
 }
 
-.categories, .meals {
-  list-style: none;
-  padding: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 20px;
-  margin: 20px;
-}
+/*============= HOME PAGE MENU ===============*/
 
-.categories li, .meals li {
-  background: #f2f2f2;
-  border-radius: 10px;
-  padding: 15px;
-  transition: 0.3s;
+.home-menu-item{
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+  border: 5px solid #ffffff;
+
+  display: block;
+  margin: auto;
+  margin-bottom: 10px;
+  width: 80%;
+  border-radius: 100px;
+  
 }
 
 .categories li:hover, .meals li:hover {
