--- a/style.css
+++ b/style.css
@@ -10,20 +10,13 @@ body {
 }
 
 .body-home {
-  background-image: url("images/background-01-port.png");
+  background-color: #FF0026;
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.body-meals {
-  background-image: url("images/background-02-port.png");
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 
 /*============= HEADER ===============*/
 .header {
