--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ background-color: #2196f3;
   padding: 25px 10px 10px 10px;
 }
 #home-logo-text{
-  width: 100px;
+  width: auto;
   display: block;
   margin: auto;
   padding: 25px;
