--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ background-color: #2196f3;
   padding: 25px 10px 10px 10px;
 }
 #home-logo-text{
-  width: auto;
+  width: 100px;
   display: block;
   margin: auto;
   padding: 25px;
@@ -71,7 +71,7 @@ background-color: #2196f3;
   margin-bottom: 10px;
   width: 80%;
   border-radius: 100px;
-  border-transparency: 50%;
+  border-transparent: 50%;
   
 }
 
