--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ background-color: #2196f3;
   margin-bottom: 10px;
   width: 80%;
   border-radius: 100px;
-  border-transparent: 50%;
+  border-opacity: 50%;
   
 }
 
