--- a/style.css
+++ b/style.css
@@ -60,18 +60,18 @@ background-color: #2196f3;
 .home-menu-item{
   text-decoration: none;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #000000;
   font-size: 25px;
   font-weight: bold;
   text-align: center;
-  border: 5px solid #ffffff;
+  border: 5px solid #000000;
 
   display: block;
   margin: auto;
   margin-bottom: 10px;
   width: 80%;
   border-radius: 100px;
-  border-opacity: 50%;
+  border-color: #FFE8C5;
   
 }
 
