--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ background-color: #2196f3;
 .home-menu-item{
   text-decoration: none;
   text-transform: uppercase;
-  color: #000000;
+  color: #FFE8C5;
   font-size: 25px;
   font-weight: bold;
   text-align: center;
