--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ background-color: #2196f3;
 .home-menu-item{
   text-decoration: none;
   text-transform: uppercase;
-  color: #FFE8C5;
+  color: #000000;
   font-size: 25px;
   font-weight: bold;
   text-align: center;
@@ -72,7 +72,7 @@ background-color: #2196f3;
   width: 80%;
   border-radius: 100px;
   border-color: #FFE8C5;
-  
+  background: rgba(225,225,225,8);
 }
 
 .categories li:hover, .meals li:hover {
