--- a/style.css
+++ b/style.css
@@ -71,8 +71,7 @@ background-color: #2196f3;
   margin-bottom: 10px;
   width: 80%;
   border-radius: 100px;
-  border-color: #FFE8C5;
-  background: rgba(225,225,225,8);
+  background: linear-gradient rgba(225,225,225,8);
 }
 
 .categories li:hover, .meals li:hover {
