--- a/style.css
+++ b/style.css
@@ -64,14 +64,14 @@ background-color: #2196f3;
   font-size: 25px;
   font-weight: bold;
   text-align: center;
-  border: 5px solid #000000;
+  border: 2px solid #000000;
 
   display: block;
   margin: auto;
   margin-bottom: 10px;
   width: 80%;
   border-radius: 100px;
-  background: linear-gradient rgba(225,225,225,8);
+ background: rgba(255,255,255,.12);
 }
 
 .categories li:hover, .meals li:hover {
