--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 .body-home {
   background-image: url("images/background.png");
-  background-color: #FF0026;
+  background-color: #FF0026
   background-position: center;
   background-attachment: fixed
   background-repeat: no-repeat;
