--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
   background-image: url("images/background.png");
   background-color: #FF0026
   background-position: center;
-  background-attachment: fixed
+  background-attachment: fixed;;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover
 }
 
 
