--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   background-attachment: fixed;;
   background-repeat: no-repeat;
   background-size: cover;
-  background-width: 100%;
+  background-width: auto
 }
 
 
