--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ background-color: #FF3700;
   border: 2px solid #000000;
   margin: 10px;
   border-radius: 5px;
+  background: rgba(255,255,255,.12);
 }
 
 .meals-list-item i {
