--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 /*============= HEADER ===============*/
 .header {
-  background: rgba(255,255,255,.12);
+  background: #000000 rgba(255,255,255,.12);
   width: 100%;
   height: 50px;
   top: 0;
