--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@ body {
 
 /*============= HEADER ===============*/
 .header {
-  background: #000000 rgba(255,255,255,.12);
+  background: #000000;
   width: 100%;
   height: 50px;
   top: 0;
+  border-radius: 5px;
 
   position: fixed;
   overflow: hidden;
@@ -112,7 +113,7 @@ body {
 .meals-list-item i {
   float: right;
   color: #000000;
-  padding-right: 20px;
+  padding-right: 10px;
 }
 
 .meals-list-item h1 {
