--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #FF0026
 }
 
 /*============= MEALS PAGE MENU ===============*/
