--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 /*============= HEADER ===============*/
 .header {
-  background: rgba(0,0,0,0)
+  background: rgba(0,0,0,0);
   width: 100%;
   height: 50px;
   top: 0;
@@ -35,7 +35,7 @@ body {
 .header i {
   float: left;
   padding: 17px 0px 0px 17px;
-  color: #ffffff;
+  color: #000000;
 }
 .header img {
   width: 250px;
