--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 /*============= HEADER ===============*/
 .header {
-  background: rgba(0,0,0,0);
+  background: rgba(0,0,0,.12);
   width: 100%;
   height: 50px;
   top: 0;
@@ -82,8 +82,8 @@ body {
               font-size: 10px;
              }
 
-.categories li:hover, .meals li:hover {
-  background: #ffe0cc;
+.home-menu-item :hover, .meals-list-item :hover {
+  background: rgba(255,255,255,.12);
 }
 
 /*============= MEALS PAGE ===============*/
