--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ body {
 
 .home-menu-item :hover, .meals-list-item :hover {
   background: rgba(255,255,255,.12);
+  color: #ffffff;
 }
 
 /*============= MEALS PAGE ===============*/
