--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  background-width: auto;
+  background-width: 100%;
 }
 
 /*============= MEALS PAGE MENU ===============*/
