--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .header i {
   float: left;
   padding: 17px 0px 0px 17px;
-  color: #000000;
+  color: #ffffff;
 }
 .header img {
   width: 250px;
