--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
               font-size: 10px;
              }
 
-.home :hover, .meals  :hover {
+.home-menu :hover, .meals-list :hover {
   background: rgba(0,0,0,.20);
   text: none;
 }
