--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 
 .home-menu :hover, .meals-list :hover {
   background: rgba(0,0,0,.20);
-  text: none;
+  color: rgba(255,255,255,.20);
 }
 
 /*============= MEALS PAGE ===============*/
