--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 .header i {
   float: left;
   padding: 17px 0px 0px 17px;
-  color: #ffffff;
+  color: #FFE8C5;
 }
 .header img {
   width: 250px;
