--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
 
 .home-menu :hover, .meals-list :hover {
   background: #FF0026;
-  color: #FFEE00;
+  color: #FFE8C5;
 }
 
 /*============= MEALS PAGE ===============*/
