--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-
+  background-color: #FFE8C5;
 }
 
 
