--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color:
+}
 
 
 /*============= HEADER ===============*/
 .header {
-  background: rgba(0,0,0,.20);
+  background: rgba(0,0,0,.50);
   width: 100%;
   height: 50px;
   top: 0;
