--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 .header i {
   float: left;
   padding: 17px 0px 0px 17px;
-  color: #FFE8C5;
+  color: #000000;
 }
 .header img {
   width: 250px;
