--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-width: auto;
+  background-width: 100%;
 }
 
 
