--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-width: 100%;
+  background-size: fit;
 }
 
 
