--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
 
 .body-meals {
   background-image: url("images/background.png");
-  background-position: center;
+  background-position: center 
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
