--- a/style.css
+++ b/style.css
@@ -131,3 +131,69 @@ body {
   padding-left: 11px;
   margin-top: -7px;
 }
+
+/*============= RECIPE PAGE ===============*/
+
+#recipe{
+  padding-top: 50px;
+}
+
+/*============= RECIPE DETAILS ===============*/
+.recipe-details img{
+   width: 100%; 
+}
+.recipe-details h1{
+  font-size: 25px; 
+  text-align: center; 
+  border: 5px solid #1a1a1a;
+  margin: 10px;
+  padding: 5px;
+  border-radius: 100px;
+}
+
+.recipe-details h2 {
+  font-size: 20px; 
+  text-align: left;
+  margin: 10px;
+  margin: 0;
+}
+
+.recipe-details-info {
+  margin-right: 25px;
+  margin-left: 25px;
+}
+.recipe-details-info p {
+  font-size: 13px;
+  display: inline-block;
+}
+
+.recipe-details-ingredients label {
+  line-height: 25px;
+  margin-left: 10px;
+}
+
+.recipe-details-steps {
+  padding-top: 20px;
+}
+
+.recipe-details-steps ol{
+  padding-left: 30px;
+}
+
+/*============= CUSTOM CHECKBOX ===============*/
+
+input [type=checkbox] {
+  display: none; 
+}
+
+input [type=checkbox] + label:before {
+  font-family: FontAwesome
+  display: inline-block;
+  
+  content: "\f0c8";
+  letter-spacing: 10px;
+  font-size: 20px;
+}
+input [type=checkbox]:ckecked + label:before {
+  content: "\f14a";
+}
