--- a/style.css
+++ b/style.css
@@ -132,17 +132,17 @@ body {
   margin-top: -7px;
 }
 
-/*============= RECIPE PAGE ===============*/
+/*============= item PAGE ===============*/
 
-#recipe{
+#item{
   padding-top: 50px;
 }
 
 /*============= RECIPE DETAILS ===============*/
-.recipe-details img{
+.item-details img{
    width: 100%; 
 }
-.recipe-details h1{
+.item-details h1{
   font-size: 25px; 
   text-align: center; 
   border: 5px solid #1a1a1a;
@@ -151,32 +151,32 @@ body {
   border-radius: 100px;
 }
 
-.recipe-details h2 {
+.item-details h2 {
   font-size: 20px; 
   text-align: left;
   margin: 10px;
   margin: 0;
 }
 
-.recipe-details-info {
+.item-details-info {
   margin-right: 25px;
   margin-left: 25px;
 }
-.recipe-details-info p {
+.item-details-info p {
   font-size: 13px;
   display: inline-block;
 }
 
-.recipe-details-ingredients label {
+.item-details-ingredients label {
   line-height: 25px;
   margin-left: 10px;
 }
 
-.recipe-details-steps {
+.item-details-steps {
   padding-top: 20px;
 }
 
-.recipe-details-steps ol{
+.item-details-steps ol{
   padding-left: 30px;
 }
 
