--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
   width: 300px;
   padding-top: 14px;
   padding-right: 25px;
+  position: fixed;
 }
 
 /*============= HOME PAGE ===============*/
