--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body {
 /*============= item PAGE ===============*/
 
 #item{
-  padding-top: 50px;
+  padding-top: 60px;
 }
 
 .body-meals {
@@ -148,9 +148,9 @@ body {
    width: 100%;
    position: center;
   border: 2px solid #000000;
-   margin-right: 10px;
-  margin-left: 10px;
+   margin: 10px;
   border-radius: 5px;
+  display: block;
 }
 .item-details h1{
   font-size: 25px; 
