--- a/style.css
+++ b/style.css
@@ -145,10 +145,10 @@ body {
   
 /*============= RECIPE DETAILS ===============*/
 .item-details img{
-   width: 98%;
+   width: 100%;
    position: center;
    border: 2px solid #000000;
-   margin:10px;
+   margin: 0 10px 0rem 10px;
   border-radius: 5px;
   display: block;
 }
@@ -178,11 +178,11 @@ body {
 }
 
 .item-details-ingredients {
-  background: #f9f9f9;
+  background: rgba(255,255,255,.12);
   padding: 1.5rem;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-  margin-bottom: 1.5rem;
+  margin: 0 10px 1rem 10px;
 }
 
 .item-details-ingredients h2 {
