--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
    width: 100%;
    position: center;
    border: 2px solid #000000;
-   margin: 0 10px 0rem 10px;
+   margin: 0 10px 1rem 10px;
   border-radius: 5px;
   display: block;
 }
@@ -159,10 +159,11 @@ body {
   margin: 10px;
   padding: 5px;
   border-radius: 5px;
+  background: rgba(255,255,255,.12);
 }
 
 .item-details h2 {
-  font-size: 20px; 
+  font-size: 18px; 
   text-align: left;
   margin: 10px;
   margin: 0;
@@ -181,7 +182,6 @@ body {
   background: rgba(255,255,255,.12);
   padding: 1.5rem;
   border-radius: 5px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
   margin: 0 10px 1rem 10px;
 }
 
@@ -192,9 +192,9 @@ body {
 }
 
 .item-details-ingredients label {
-  font-size: 1rem;
-  color: #444;
-  margin-left: 0.4rem;
+  font-size: 15px;
+  color: #000000;
+  margin-left: 10px;
   cursor: pointer;
 }
 
@@ -205,17 +205,17 @@ body {
 }
 
 .item-details-steps {
-  background: #fff;
+  background: rgba(255,255,255,.12);
   padding: 1.5rem;
-  border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  border-radius: 5px;
+  margin: 0 10px 1rem 10px;
 }
 
 .item-details-steps label {
   font-weight: bold;
   display: block;
   margin-bottom: 0.5rem;
-  color: #333;
+  color: #000000;
 }
 
 .item-details-steps textarea {
