--- a/style.css
+++ b/style.css
@@ -186,9 +186,9 @@ body {
 }
 
 .item-details-ingredients h2 {
-  font-size: 1.3rem;
+  font-size: 18px;
   margin-bottom: 1rem;
-  color: #333;
+  color: #000;
 }
 
 .item-details-ingredients label {
@@ -219,12 +219,12 @@ body {
 }
 
 .item-details-steps textarea {
-  width: 100%;
+  width: 95%;
   min-height: 80px;
   padding: 0.8rem;
   font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  border: 2px solid #000000;
+  border-radius: 5px;
   resize: vertical;
 }
 
@@ -235,7 +235,7 @@ body {
   padding: 0.7rem 1.5rem;
   font-size: 1rem;
   border: none;
-  border-radius: 8px;
+  border-radius: 5px;
   cursor: pointer;
   transition: background 0.25s;
 }
