--- a/style.css
+++ b/style.css
@@ -313,5 +313,6 @@ body.body-home {
   text-align: center;
   padding: 1rem;
   font-size: 0.9rem;
-  color: #444;
+  color: #000;
+  text-decoration: none;
 }
