--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ input [type=checkbox]:ckecked + label:before {
 }
 
 /*============= thankX ===============*/
-body.body-home {
+.body-home {
   display: flex;
   align-items: center;
   justify-content: center;
