--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ body {
 }
 
 .item-details-text button:hover {
-  background: #e65c00;
+  background: #FF0026;
 }
 
 /*============= CUSTOM CHECKBOX ===============*/
