--- a/style.css
+++ b/style.css
@@ -250,14 +250,14 @@ body {
   font-size: 1.8rem;
   color: #000;
   margin: 10px;
-  padding-left: 200px;
+  text-align: center;
 }
 
 .item-details-text p {
   font-size: 1.1rem;
   color: #000;
   margin: 10px;
-  padding-left: 250px;
+  text-align: center;
 }
 
   
