--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@ body {
    border: 2px solid #000000;
    margin: 0 10px 1rem 10px;
   border-radius: 5px;
+  width: auto;
+  position: center;
 }
   
  item-details h1{
