--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body {
   position: center;
 }
   
- item-details h1{
+.item-details h1{
   font-size: 25px; 
   text-align: center; 
   border: 2px solid #000000;
