--- a/style.css
+++ b/style.css
@@ -148,8 +148,9 @@ body {
    border: 2px solid #000000;
    margin: 0 10px 1rem 10px;
    border-radius: 5px;
-   width: 90%;
+   width: 95%;
    text-align: center;
+   position: center;
 }
   
 .item-details h1{
