--- a/style.css
+++ b/style.css
@@ -146,11 +146,11 @@ body {
 /*============= RECIPE DETAILS ===============*/
 .item-details img {
    border: 2px solid #000000;
-   margin: 0 10px 1rem 10px;
+   margin-right:auto;
+   margin-left: auto;
    border-radius: 5px;
-   width: 95%;
-   text-align: center;
-   position: center;
+   max-width: 100%;
+   display: block;
 }
   
 .item-details h1{
